# scrapper

./: .gitignore  Jenkinsfile  Jenkinsfile.nightly  PR9_FAILURE_ANALYSIS.md  PR_REVIEW_GUIDE.md  README.md  WEB_APP_GUIDE.md  dev-requirements.txt  get_growth_areas.py  mypy.ini  pyproject.toml  requirements.txt  scrapy.cfg  states.yml  web_app.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  gitleaks.yml  nightly-scrape.yml
project_tracking/: README.md  backlog.yml
project_tracking/stories/: VRM-S001-scrape-listings.md  VRM-S002-growth-areas.md
templates/: index.html
tests/: test_growth_areas.py  test_pipeline.py  test_spider_unit.py  test_vrm_parse.py  test_web_app.py
tests/bdd/features/: growth_areas.feature  scrape.feature
tests/bdd/steps/: conftest.py  test_growth_areas_steps.py  test_scrape_steps.py
tests/data/: va_page_sample.html
vrm_crawl/: __init__.py  growth_areas.py  items.py  middlewares.py  pipelines.py  settings.py
vrm_crawl/spiders/: __init__.py  vrm.py
